# httpie-curl-cffi

./: LICENSE  Makefile  README.md  pyproject.toml
src/httpie_curl_cffi/: __init__.py
