[project]
name = "httpie-curl-cffi"
version = "1.0.0a1"
description = "HTTPie plugin for using curl_cffi as transport"
authors = [
    {name = "Xie Yanbo", email = "xieyanbo@gmail.com"},
]
dependencies = [
    "httpie>=3.0.0",
    "curl_cffi>=0.5.0",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.entry-points."httpie.plugins.transport.v1"]
httpie_curl_cffi = "httpie_curl_cffi:CurlCffiTransportPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/httpie_curl_cffi"]
